deployments/pathweb/workloads/home-network-privileged/otbr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otbr
  namespace: home-network-privileged
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: otbr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: otbr
      annotations:
        k8s.v1.cni.cncf.io/networks: otbr-iot-network
    spec:
      # runtimeClassName: kata
      nodeSelector:
        kubernetes.io/os: linux
        location: rfhome
      containers:
      - name: otbr
        image: ghcr.io/wittdennis/homeassistant-otbr:latest
        # command: ["docker-entrypoint.sh"]
        # args: ["otbr-agent"]
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
            - NET_RAW
        resources:
          limits:
            squat.ai/net-tun: 1
          requests:
            squat.ai/net-tun: 1
        volumeMounts:
        - name: otbr-data
          mountPath: /data
        - name: scripts
          mountPath: /scripts
        - name: otbr-root
          mountPath: /etc/s6-overlay/s6-rc.d/otbr-agent
        - name: patched-scripts
          mountPath: /etc/s6-overlay/s6-rc.d/otbr-agent/run
          subPath: run
        ports:
        - containerPort: 8081
          name: rest
        - containerPort: 8082
          name: web
      volumes:
      - name: otbr-data
        persistentVolumeClaim:
          claimName: otbr-data
      - name: scripts
        configMap:
          name: otbr-patch
          defaultMode: 0755
      - name: otbr-root
        emptyDir: {}
      - name: patched-scripts
        emptyDir: {}
