deployments/pathweb/workloads/home-network-privileged/otbr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: otbr
  namespace: home-network
spec:
  selector:
    app: otbr
  ports:
  - name: rest
    port: 8081
    targetPort: 8081
  - name: web
    port: 8082
    targetPort: 8082
