deployments/pathweb/workloads/home-network-privileged/otbr/ciliumnetworkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: otbr
  namespace: home-network-privileged
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: otbr
  ingress:
  - fromEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: home-network
        app.kubernetes.io/name: home-assistant
    toPorts:
    - ports:
      - port: "8081"
        protocol: TCP
  - fromEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: traefik
    toPorts:
    - ports:
      - port: "8082"
        protocol: TCP
  egress:
  - toPorts:
    - ports:
      - port: "53"
        protocol: UDP
    - ports:
      - port: "53"
        protocol: TCP
    toEndpoints:
    - matchLabels:
        io.cilium/k8s-app: kube-dns
  - toCIDR:
    - "192.168.229.2/32"
  - toEndpoints:
    - matchLabels:
        app.kubernetes.io/name: slzb-ultima-wg
        io.kubernetes.pod.namespace: home-network-privileged
    toPorts:
    - ports:
      - port: "6638"
        protocol: TCP
  - toCIDRSet:
    - cidr: ::/0
      except:
      - fc00::/7
    - cidr: 0.0.0.0/0
      except:
      - 10.0.0.0/8
      - 192.168.0.0/16
      - 172.16.0.0/12
